--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,17 @@
 	"editor.formatOnSave": true,
 	"editor.formatOnPaste": true,
 
+	// ref: https://biomejs.dev/reference/vscode/
+	"editor.codeActionsOnSave": {
+		"quickfix.biome": "explicit",
+		"source.organizeImports.biome": "explicit"
+	},
+	"biome.rename": true,
+	// ref: https://biomejs.dev/internals/language-support/
+	"[javascript][typescript][javascriptreact][typescriptreact][json][jsonc]": {
+		"editor.defaultFormatter": "biomejs.biome"
+	},
+
 	"[toml]": {
 		"editor.defaultFormatter": "tamasfe.even-better-toml"
 	},
