chore: extends @tsconfig/strictest to tsconfig.json

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,8 @@
 {
 	"$schema": "https://json.schemastore.org/tsconfig",
-	"extends": "@tsconfig/bun/tsconfig.json",
+	"extends": ["@tsconfig/bun/tsconfig.json", "@tsconfig/strictest/tsconfig.json"],
 	"compilerOptions": {
-		"allowJs": true,
-		"checkJs": true
+		"allowJs": true
 	},
 	// override to include js files
 	"include": [
