--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 	"devDependencies": {
 		"@biomejs/biome": "1.4.1",
 		"@tsconfig/bun": "1.0.1",
+		"@tsconfig/strictest": "2.0.2",
 		"bun-types": "latest",
 		"ignore-sync": "7.0.1",
 		"typescript": "5.3.3"
