--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,5 +23,7 @@
 	},
 
 	// disable to use type definitions in node_modules
-	"typescript.disableAutomaticTypeAcquisition": true
+	"typescript.disableAutomaticTypeAcquisition": true,
+
+	"editor.defaultColorDecorators": true
 }
