--- a/.github/workflows/biome.yml
+++ b/.github/workflows/biome.yml
@@ -11,7 +11,7 @@ permissions:
 
 jobs:
   biome:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     steps:
       - name: Checkout
         uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
