--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@googleapis/drive": "8.4.0",
     "compare-urls": "4.0.0",
+    "consola": "3.2.3",
     "discord.js": "14.14.1"
   },
   "devDependencies": {
